# data-engineering-quickstart

./: README.md  nc_file.ipynb  pyproject.toml
src/etl/: __init__.py  main.py
src/shared/: logger.py
