[tool.poetry]
name = "data-engineering-quickstart"
version = "0.1.0"
description = ""
authors = ["Dang Vu <vnhd1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
xarray = "2024.7.0"
netcdf4 = "1.7.1.post2"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
flake8 = "^7.1.1"
jupyter = "^1.0.0"


[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[flake8]
max-complexity = 10
max-line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

